# todolist

./: .gitignore  Makefile  docker-compose.yaml  nginx.conf
backend/: .flake8  Dockerfile  pyproject.toml
backend/docker_compose/: backend_app.sh  backend_app.yaml  nginx.yaml  postgres.yaml
backend/src/: app.py  exceptions.py  middlewares.py  routers.py  settings.py
backend/src/api/v1/: auth.py  depends.py  routers.py
backend/src/database/: database.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 8fcb2ecb65d3_.py
backend/src/models/: __init__.py  tasks.py  users.py
backend/src/repositories/: users.py
backend/src/schemas/: users.py
backend/src/services/: users.py
backend/src/utils/: auth.py  repository.py  unitofwork.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  Status.ts
frontend/src/components/: SignUpForm.tsx
frontend/src/components/Button/: Button.module.css  Button.tsx
frontend/src/components/Header/: Header.module.css  Header.tsx
frontend/src/components/Input/: Input.module.css  Input.tsx
frontend/src/components/ListHeader/: ListHeader.module.css  ListHeader.tsx
frontend/src/components/ListItem/: ListItem.module.css  ListItem.tsx
frontend/src/components/Pagination/: Pagination.module.css  Pagination.tsx
frontend/src/components/SignInForm/: SignInForm.module.css  SignInForm.tsx
frontend/src/components/SignUpForm/: SignUpForm.module.css  SignUpForm.tsx
frontend/src/pages/: SignIn.tsx  SignInSignUp.css  SignInUp.module.css  SignUp.tsx
(+2 files in other folders)
